; ModuleID = '/home/carl/AnghaBench/qmk_firmware/keyboards/mxss/extr_rgblight.c_rgblight_decrease_hue.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/keyboards/mxss/extr_rgblight.c_rgblight_decrease_hue.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32, i32 }

@rgblight_config = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@RGBLIGHT_HUE_STEP = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @rgblight_decrease_hue() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @rgblight_config, i32 0, i32 0), align 4
  %3 = load i32, i32* @RGBLIGHT_HUE_STEP, align 4
  %4 = sub nsw i32 %2, %3
  %5 = icmp slt i32 %4, 0
  br i1 %5, label %6, label %12

6:                                                ; preds = %0
  %7 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @rgblight_config, i32 0, i32 0), align 4
  %8 = add nsw i32 %7, 360
  %9 = load i32, i32* @RGBLIGHT_HUE_STEP, align 4
  %10 = sub nsw i32 %8, %9
  %11 = srem i32 %10, 360
  store i32 %11, i32* %1, align 4
  br label %17

12:                                               ; preds = %0
  %13 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @rgblight_config, i32 0, i32 0), align 4
  %14 = load i32, i32* @RGBLIGHT_HUE_STEP, align 4
  %15 = sub nsw i32 %13, %14
  %16 = srem i32 %15, 360
  store i32 %16, i32* %1, align 4
  br label %17

17:                                               ; preds = %12, %6
  %18 = load i32, i32* %1, align 4
  %19 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @rgblight_config, i32 0, i32 2), align 4
  %20 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @rgblight_config, i32 0, i32 1), align 4
  %21 = call i32 @rgblight_sethsv(i32 %18, i32 %19, i32 %20)
  ret void
}

declare dso_local i32 @rgblight_sethsv(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
